# gavel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: chinook_bank.jsonl
docs/adr/: 0001-three-valued-verdicts.md  0002-deterministic-table-judge.md  0003-pluggable-db-adapters.md  0004-optional-llm-judge.md
examples/: baseline_predictions.jsonl  report.md
gavel/: __init__.py  __main__.py  agents.py  bank.py  cli.py  db.py  fetch.py  judge.py  llm.py  report.py  runner.py
scripts/: fetch_chinook.py
tests/: conftest.py  test_agents.py  test_bank.py  test_cli.py  test_judge.py  test_llm_parse.py  test_normalize.py  test_report.py  test_runner.py
tests/fixtures/: llm_judge_response.txt
