[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gavel"
version = "0.1.0"
description = "LLM-as-a-judge evaluation harness for text-to-SQL agents, demonstrated on the public Chinook database"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Zac Plischka", email = "zacplischka@gmail.com" }]
keywords = ["evaluation", "llm", "text-to-sql", "llm-as-a-judge", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
# Runtime dependencies: none. The harness is stdlib-only by design.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
gavel = "gavel.cli:main"

[project.urls]
Homepage = "https://github.com/zacplischka/gavel"

[tool.setuptools]
packages = ["gavel"]

[tool.setuptools.package-data]
gavel = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "chinook: requires data/Chinook_Sqlite.sqlite (run `python -m gavel fetch` first); skipped otherwise",
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["gavel", "scripts", "tests"]
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
